--- a/lib/moba_web/templates/current_hero/show.html.leex
+++ b/lib/moba_web/templates/current_hero/show.html.leex
@@ -12,14 +12,17 @@
                         <img src="/images/league_<%=@current_hero.league_tier%>.png" class="league-logo" style="margin-top:-3px">
                         <%=@current_hero.name%>
                     </h3>
-                    <%= if @current_mode == "pvp" || @current_hero.level == Moba.max_hero_level() do %>
+                    <%= if @current_mode == "pvp" do %>
                         <div class="row">
                             <div class="col">
                                 <h4 class="font-italic text-dark">Level <%=@current_hero.level%> <%=@current_hero.avatar.name%></h4>
                             </div>
-                        </div>
-                    <% else %>
-                        <div class="row">
+                        </div>                    
+                    <% end %>
+                </div>
+                <div class="col col-md-5 col-lg-5 col-xl-4 <%=if @show_build, do: "d-none"%>">
+                    <div class="flex-column">
+                        <div class="row no-gutters boxes">
                             <div class="col">
                                 <div class="float-left center">
                                     <ul class="pagination pagination-rounded mb-0">
@@ -36,13 +39,6 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    <% end %>
-                </div>
-                <div class="col col-md-5 col-lg-5 col-xl-4 <%=if @show_build, do: "d-none"%>">
-                    <div class="flex-column">
-                        <div class="row no-gutters boxes">
-                            <%=render "_navigation.html", origin: @origin, current_user: @current_hero.user, socket: @socket, current_mode: @current_mode, unreads: @unreads %>
                         </div>
                         <div class="row d-none d-md-block no-gutters" id="current-hero-stats">
                             <div class="col flex no-wrap pl-0" style="overflow: visible;">
