--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -39,6 +39,10 @@ body{
   min-width: 10%;
 }
 
+.no-mininum{
+  min-width: 0% !important;
+}
+
 hr{
   border-color: #424e5a;
   margin: 0;
@@ -132,6 +136,10 @@ hr{
 
     .nav-link{
       padding-top: 1rem;
+    }
+
+    .avatar{
+      max-width: 100px;
     }
   }
 
