--- a/lib/moba_web/templates/dashboard/_hero_list.html.leex
+++ b/lib/moba_web/templates/dashboard/_hero_list.html.leex
@@ -24,7 +24,7 @@
                     <tr>
                         <td class="text-center" width="20%">
                             <h4>
-                                <%=hero.name%><%=if hero.finished_pve && !hero.summoned do %><span class="text-success">#<%=hero.pve_ranking%></span><%end%>
+                                <%=hero.name%><%=if hero.finished_pve do %><span class="text-success">#<%=hero.pve_ranking%></span><%end%>
                             </h4>
 
                             <%=GH.hero_avatar(hero, false)%>
@@ -36,23 +36,16 @@
                             <br/>
                             <%=GH.hero_item_list(hero, true)%>
                         </td>
-                        <%= if hero.summoned do %>
-                            <td class="text-center" width="25%">
-                                <img src="/images/league_<%=hero.league_tier%>.png" class="league-logo">
-                                <h5 class="text-primary">Summoned</h5>
-                            </td>
-                        <% else %>
-                            <td class="text-center" width="25%">
-                                <img src="/images/league_<%=hero.league_tier%>.png" class="league-logo">
-                                <h5 class="text-success"><%=GH.pve_win_rate(hero)%>% Win Rate</h5>
-                                <%=if hero.easy_mode do %>
-                                    <h5 class="text-primary">Casual Mode</h5>
-                                <% else %>
-                                    <h5 class="text-warning"><%=hero.buybacks%> Buybacks</h5>
-                                    <h5 class="text-danger">Competitive Mode</h5>
-                                <% end %>
-                            </td>
-                        <% end %>
+                        <td class="text-center" width="25%">
+                            <img src="/images/league_<%=hero.league_tier%>.png" class="league-logo">
+                            <h5 class="text-success"><%=GH.pve_win_rate(hero)%>% Win Rate</h5>
+                            <%=if hero.easy_mode do %>
+                                <h5 class="text-primary">Casual Mode</h5>
+                            <% else %>
+                                <h5 class="text-warning"><%=hero.buybacks%> Buybacks</h5>
+                                <h5 class="text-danger">Competitive Mode</h5>
+                            <% end %>
+                        </td>
                         <td class="text-center" width="20%">
                             <%= if hero.finished_pve do %>
                                 <%=live_redirect class: "btn btn-primary btn-lg btn-block", to: Routes.live_path(@socket, MobaWeb.HeroLiveView, hero) do %>
