--- a/lib/moba_web/templates/jungle/_jungle_rules.html.eex
+++ b/lib/moba_web/templates/jungle/_jungle_rules.html.eex
@@ -9,7 +9,7 @@
                 <h5 class="text-center">Objective</h5>
                 <p>Your main goal in the Jungle is to level up your hero by using your all of your available Ganks to beat opponents, gain <span class="text-primary">XP</span> and farm as much <span class="text-warning">gold</span> as you can until you ultimately reach the <span class="text-league-5">Master League</span>.</p>
                 <h5 class="text-center">Leagues</h5>
-                <p>At any point, you can fight through a <span class="text-danger">League Challenge</span> that will put you in a higher league if you are victorious. Winning the <span class="text-danger">League Challenge</span> also grants you <span class="text-warning"><%=Moba.league_win_gold_bonus()%> gold</span> and a <span class="text-pink"><%=round(Moba.league_buff_multiplier() * 100)%>% stats boost</span> which really helps your leveling.</p>
+                <p>At any point, you can fight through a <span class="text-danger">League Challenge</span> that will put you in a higher league if you are victorious. Winning the <span class="text-danger">League Challenge</span> also grants you <span class="text-warning"><%=Moba.league_win_bonus()%> gold</span> and a <span class="text-pink"><%=round(Moba.league_buff_multiplier() * 100)%>% stats boost</span> which really helps your leveling.</p>
                 <h5 class="text-center">Skills</h5>
                 <p>You get Skill Points every 2 levels, which you can use to level up your skills. Your ultimate skill can only be leveled up when your hero is at level 10 and 20. </p>
                 <h5 class="text-center">Shop</h5>
