--- a/lib/moba_web/templates/tavern/index.html.leex
+++ b/lib/moba_web/templates/tavern/index.html.leex
@@ -1,6 +1,4 @@
-<%= @current_hero && live_render(@socket, MobaWeb.CurrentHeroLiveView, session: %{"hero_id" => @current_hero.id}, id: "current-hero-live-view") %>
-
-<div class="content-with-hero-bar tavern" phx-hook="SetMainWrapper" id="tavern">
+<div class="content-with-hero-bar tavern" id="tavern">
 
     <div class="row mt-3">
         <div class="col">
@@ -20,16 +18,6 @@
                 <h2 class="text-warning counter mt-0"><i class="fab fa-ethereum mr-2"></i><%=@current_user.shard_count%></h3>
                 <p class="text-muted mb-0">Shards</p>
             </div>
-        </div>
-    </div>
-
-    <div class="row mt-2 mb-2">
-        <div class="col text-center">
-            <%= live_redirect to: "/summon", class: "btn btn-outline-primary btn-lg #{if @current_user.shard_count < Moba.summon_cost(), do: "disabled"}" do %>
-                <i class="fa fa-user fa-2x mr-1 mt-2"></i>
-                <strong class="font-20 d-block">Summon Hero (100 Shards)</strong>
-                <p class="font-15">Create a level 25 Master League Hero to use in PVP</p>
-            <% end %>
         </div>
     </div>
 
