--- a/lib/moba_web/templates/user/show.html.leex
+++ b/lib/moba_web/templates/user/show.html.leex
@@ -1,6 +1,4 @@
-<%= @current_hero && live_render(@socket, MobaWeb.CurrentHeroLiveView, session: %{"hero_id" => @current_hero.id}, id: "current-hero-live-view") %>
-
-<div class="user-profile content-with-hero-bar" phx-hook="SetMainWrapper" id="user-profile">
+<div class="user-profile content-with-hero-bar" id="user-profile">
     <div class="row mt-3">
         <div class="col-md-6 col-xl-4">
             <div class="row">
