--- a/lib/moba_web/templates/create/index.html.leex
+++ b/lib/moba_web/templates/create/index.html.leex
@@ -144,18 +144,10 @@
                         </div>
                         <%= unless @error do %>
                             <div class="row mb-3">
-                                <div class="col">
-                                    <button class="btn btn-outline-success btn-block btn-lg" phx-click="create-easy" phx-hook="Loading" loading="Creating..." id="create-easy-button">
-                                        <i class="fa fa-user fa-2x mr-1 mt-2"></i>
-                                        <strong class="font-20 d-block loading-text">Invoke Hero in Casual Mode</strong>
-                                        <p class="font-15">Great for learning the game.<br/>Objective: reach the <span class="text-league-5">Master League</span>.</p>
-                                    </button>
-                                </div>
-                                <div class="col">
-                                    <button class="btn btn-outline-danger btn-block btn-lg" phx-click="create-veteran" phx-hook="Loading" loading="Creating..." id="create-veteran-button">
-                                        <i class="fa fa-user-ninja fa-2x mr-1 mt-2"></i>
-                                        <strong class="font-20 d-block loading-text">Invoke Hero in Competitive Mode</strong>
-                                        <p class="font-15">The true Browser MOBA experience.<br/>Objective: reach the <span class="text-league-6">Grandmaster League</span>.</p>
+                                <div class="col-4 margin-auto">
+                                    <button class="btn btn-outline-success btn-block btn-lg" phx-click="create" phx-hook="Loading" loading="Creating..." id="create-button">
+                                        <i class="fa fa-street-view fa-2x mr-1 mt-2"></i>
+                                        <strong class="font-20 d-block loading-text">Invoke <%= @name %></strong>
                                     </button>
                                 </div>
                             </div>
@@ -167,19 +159,11 @@
                             <%= for skill <- @selected_skills do %>
                                 <input type="hidden" name="skills[]" value="<%= skill.id %>"/>
                             <% end %>
-                            <div class="row">
+                            <div class="row mb-3">
                                 <div class="col">
                                     <button class="btn btn-outline-success btn-block btn-lg" type="submit">
-                                        <i class="fa fa-user fa-2x mr-1 mt-2"></i>
-                                        <strong class="font-20 d-block loading-text">Invoke Hero in Casual Mode</strong>
-                                        <p class="font-15">Great for learning the game.<br/>Objective: reach the <span class="text-league-5">Master League</span>.</p>
-                                    </button>
-                                </div>
-                                <div class="col">
-                                    <button class="btn btn-outline-danger btn-block btn-lg disabled no-action">
-                                        <i class="fa fa-user-ninja fa-2x mr-1 mt-2"></i>
-                                        <strong class="font-20 d-block loading-text">Invoke Hero in Competitive Mode <em class="text-muted">(Unavailable)</em></strong>
-                                        <p class="font-15">The true Browser MOBA experience.<br/>Objective: reach the <span class="text-league-6">Grandmaster League</span>.</p>
+                                        <i class="fa fa-street-view fa-2x mr-1 mt-2"></i>
+                                        <strong class="font-20 d-block loading-text">Invoke Hero</strong>
                                     </button>
                                 </div>
                             </div>
