--- a/lib/moba_web/templates/hero/_quests.html.leex
+++ b/lib/moba_web/templates/hero/_quests.html.leex
@@ -4,7 +4,7 @@
             <h3 class="text-center m-0"><%=quest_title_for(@completed_progressions)%> Completed</h3>
         </div>
         <div class="card-body">
-            <%= if length(@completed_progressions) > 1 do %>
+            <%= if display_quest_tabs?(assigns) do %>
                 <ul class="nav nav-pills navtab-bg nav-justified mb-3">
                     <%= if @completed_season_progression do %>
                         <li class="nav-item">
@@ -43,7 +43,7 @@
                       </div>
                     <% end %>
                 </div>
-                <h4 class="text-center my-2"><i class="fa fa-gift mr-1 text-warning"></i>Rewards</h4>
+                <h4 class="text-center mt-3 mb-2"><i class="fa fa-gift mr-1 text-warning"></i>Rewards</h4>
                 <div class="d-flex w-100 justify-content-between text-center p-2 rounded" style="background: #323b44;">
                     <div class="row d-block">
                         <div class="col">
@@ -79,7 +79,7 @@
                         </tr>
                     <% end %>
                 </table>
-                <h4 class="text-center my-2"><i class="fa fa-gift mr-1 text-warning"></i>Rewards</h4>
+                <h4 class="text-center mt-3 mb-2"><i class="fa fa-gift mr-1 text-warning"></i>Rewards</h4>
                 <div class="d-flex w-100 justify-content-center text-center p-2 rounded" style="background: #323b44;">
                     <div class="row d-block">
                         <div class="col">
@@ -101,7 +101,7 @@
                         </tr>
                     <% end %>
                 </table>
-                <h4 class="text-center my-2"><i class="fa fa-gift mr-1 text-warning"></i>Rewards</h4>
+                <h4 class="text-center mb-2 mt-3 my-2"><i class="fa fa-gift mr-1 text-warning"></i>Rewards</h4>
                 <div class="d-flex w-100 justify-content-around text-center p-2 rounded" style="background: #323b44;">
                     <div class="row d-block">
                         <div class="col">
