--- a/lib/moba_web/templates/hero/show.html.leex
+++ b/lib/moba_web/templates/hero/show.html.leex
@@ -39,7 +39,7 @@
         <div class="col-md-6 col-xl-4">
             <div class="row">
                 <div class="col">
-                    <%=live_redirect class: "btn btn-block btn-light mb-1 btn-lg", to: Routes.live_path(@socket, MobaWeb.UserLiveView, @hero.user_id) do %><i class="fa fa-user"></i> View User Profile<%end%>
+                    <%= live_redirect class: "btn btn-block btn-light mb-1 btn-lg", to: Routes.live_path(@socket, MobaWeb.UserLiveView, @hero.user_id) do %><i class="fa fa-user"></i> View User Profile<% end %>
                 </div>
             </div>
             <div class="row">
@@ -47,8 +47,8 @@
                     <div class="card">
                         <h5 class="card-header text-center font-17 text-white">
                             <i class="fa fa-poll mr-1"></i>Hero Performance
-                            <%=unless @hero.finished_pve do %>
-                                <small class="text-muted font-italic"> - In Progress <%=@hero.pve_battles_available%> battles left)</small>
+                            <%= unless @hero.finished_at do %>
+                                <small class="text-muted font-italic"> - In Progress <%= @hero.pve_total_turns %> turns left)</small>
                             <% end %>
                         </h5>
                         <div class="card-body p-2">
@@ -56,7 +56,7 @@
                                 <div class="row">
                                     <div class="col d-flex align-items-center">
                                         <%= for {tier, _} <- Moba.leagues() do %>
-                                            <img src="/images/league_<%=tier%>.png" class="<%=tier_class(tier, @hero.league_tier)%>"/>
+                                            <img src="/images/league_<%=tier%>.png" class="<%= tier_class(tier, @hero.league_tier) %>"/>
                                             <%= unless tier == Moba.max_league_tier() do %>
                                                 <div class="progress" style="width: 30px;height: 3px; border-radius: 0">
                                                     <div style="width:100%" class="progress-bar <%=if tier >= @hero.league_tier, do: "bg-dark", else: "bg-primary"%>">
@@ -67,7 +67,7 @@
                                         <% end %>
                                     </div>
                                 </div>
-                                <h3 class="text-center mt-2 mb-2 text-league-<%=@hero.league_tier%>"><%=Moba.leagues[@hero.league_tier]%></h3>
+                                <h3 class="text-center mt-2 mb-2 text-league-<%=@hero.league_tier%>"><%= Moba.leagues[@hero.league_tier] %></h3>
                                 <div class="row text-center">
                                     <div class="col">
                                         <h3 class="mb-0 text-info">
@@ -83,13 +83,6 @@
                                         </h3>
                                         <h4 class="text-warning">Total Gold Farm</h4>
                                     </div>
-                                    <div class="col">
-                                        <h3 class="mb-0 text-success">
-                                            <i class="fa fa-crosshairs"></i>
-                                            <%=GH.pve_win_rate(@hero)%>%
-                                        </h3>
-                                        <h4 class="text-success">Win Rate</h4>
-                                    </div>
                                 </div>
                                 <%= if @hero.pvp_ranking do %>
                                     <h3 class="text-center mt-4 mb-2 text-danger">Arena</h3>
@@ -103,7 +96,7 @@
                                         <div class="col">
                                             <h3 class="mb-0 text-danger">
                                                 <i class="fa fa-crosshairs"></i>
-                                                <%=GH.pvp_win_rate(@hero)%>%
+                                                <%= GH.pvp_win_rate(@hero) %>%
                                             </h3>
                                             <h4 class="text-danger">Win Rate</h4>
                                         </div>
@@ -129,19 +122,19 @@
                         <%= for hero <- @ranking do %>
                             <tr>
                                 <td>
-                                    <h1 class="<%=if hero.id == @hero.id, do: "text-danger"%>">
-                                        <%=if hero.pve_ranking do %>
-                                        #<%=hero.pve_ranking%>
+                                    <h1 class="<%= if hero.id == @hero.id, do: "text-danger" %>">
+                                        <%= if hero.pve_ranking do %>
+                                        #<%= hero.pve_ranking %>
                                         <% else %>
                                             ?
                                         <% end %>
                                     </h1>
                                 </td>
                                 <td>
-                                    <%=live_redirect to: Routes.live_path(@socket, MobaWeb.HeroLiveView, hero) do %>
+                                    <%= live_redirect to: Routes.live_path(@socket, MobaWeb.HeroLiveView, hero) do %>
                                         <%=GH.hero_avatar(hero, false)%>
                                         <br/>
-                                        <h5 class="text-primary mb-0 mt-1"><%=hero.name%></h5>
+                                        <h5 class="text-primary mb-0 mt-1"><%= hero.name %></h5>
                                     <% end %>
                                 </td>
                                 <td>
@@ -151,7 +144,7 @@
                                     <h3 class="text-success">
                                         <i class="fa fa-clock-o"></i>
                                         <%=if hero.finished_at do %>
-                                            <%=GH.finished_time(hero)%> min
+                                            <%= GH.finished_time(hero) %> min
                                         <% else %>
                                             ??
                                         <% end %>
@@ -162,7 +155,7 @@
                     </table>
                 </div>
                 <div class="transparent card-footer p-0">
-                    <%=live_redirect to: Routes.live_path(@socket, MobaWeb.HallLiveView), class: "btn btn-block btn-light btn-sm" do %>
+                    <%= live_redirect to: Routes.live_path(@socket, MobaWeb.HallLiveView), class: "btn btn-block btn-light btn-sm" do %>
                         <i class="fa fa-table mr-1"></i>See Top Heroes
                     <% end %>
                 </div>
